--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Coffee Mug</title>
-    <link rel="stylesheet" href="Stylesss.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <section class="container">
